--- a/assets/css/maggles.css
+++ b/assets/css/maggles.css
@@ -5,12 +5,13 @@ form{
 }
 
 button, input, textarea{
-	width: 100%;
+	min-width: 33%;
     font: inherit;
     margin-bottom: 1em;
     padding: 0.6rem 0.9rem;
     border: 1px #eee solid;
     border-radius: .3rem;
+    
 }
 
 button{
@@ -18,13 +19,4 @@ button{
     text-align: center;
     background-color: #159957;
     width: 33%;
-}
-
-.logo{
-	 display: block; 
-	 margin-bottom: 1em;
-	 width:100%;
-}
-.logo img{
-	 max-width: 100%;
 }
